--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,9 @@ bin/
 gen/
 
 # Gradle files
-local.properties
 .gradle/
 build/
+/*/build/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -26,10 +26,9 @@ proguard/
 # Log Files
 *.log
 
-# Mac Files
-*.DS_Store
-
-# Intellij Idea and Android Studio files
-.idea
-*.iml
-
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
